# sail-rs

./: .gitignore  BUGS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  build-web.sh  build.rs
.cargo/: config.toml
.claude/skills/game-screenshot/: SKILL.md
examples/: feature_preview.rs  whale_preview.rs
src/: bloom.rs  captains_log.rs  celestial.rs  checklist.rs  clouds.rs  device.rs  dig_site.rs  dig_view.rs  feature_models.rs  flotsam.rs  flotsam_render.rs  font.rs  game_state.rs  geometry.rs  guide.rs  hint.rs  hud.rs  hull_shape.rs  islands_render.rs  isle_features.rs  isle_terrain.rs  main.rs  map_kraken.rs  map_wave.rs  map_whale.rs  minimap.rs  mission.rs  ocean.rs  ocean_renderer.rs  pad.rs  palette.rs  pause_menu.rs  port_lights.rs  port_view.rs  projection.rs  race.rs  rain.rs  rival_render.rs  rng.rs  sailing.rs  (+13 more)
web/: index.html
