[package]
name = "sail-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# `audio` is off in macroquad's default features; without it the audio calls
# compile to silent no-ops, so it must be opted in explicitly.
macroquad = { version = "0.4.15", features = ["audio"] }
# macroquad's bundled mixer (quad-snd → audrey) decodes only WAV/OGG, but the
# shipped clips are MP3. symphonia (pure Rust, no C toolchain) decodes them to
# PCM at load; see `sound.rs`. Only the MP3 codec/demuxer is pulled in.
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }

# MP3 decoding is far too slow unoptimized — a debug build would stall for several
# seconds decoding the clips at startup. Optimize just the decoder crates so the
# dev `cargo run` starts promptly; the game's own crate stays debug for fast
# incremental rebuilds. (These deps compile once.)
[profile.dev.package.symphonia-core]
opt-level = 3
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

# Size-tuned profile for the web (wasm) build — see build-web.sh. Keeps the
# native `release` profile untouched (opt-level 3 for the dense wave mesh) while
# squeezing the wasm: fat LTO + a single codegen unit drop cross-crate dead
# code, `panic = "abort"` removes the unwinding tables (a panic just traps in the
# browser anyway), and `strip` drops symbols. opt-level "s" keeps the renderer
# fast while still optimizing for size. Build with `--profile web`.
[profile.web]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
